--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
                         "styles": [
                             "src/styles.css",
 
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+
                             "node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css",
                             "node_modules/admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
                             "node_modules/admin-lte/docs_html/assets/css/adminlte.css",
