--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "admin-lte": "^3.0.5",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "ngx-owl-carousel-o": "^3.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
