--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.11",
     "@rxweb/reactive-form-validators": "^2.0.0-rc6",
     "admin-lte": "^3.0.5",
+    "angularx-social-login": "^3.2.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "ngx-owl-carousel-o": "^3.0.1",
