--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,8 @@
                             "node_modules/jquery/dist/jquery.slim.min.js",
                             "node_modules/popper.js/dist/umd/popper.min.js",
 
+                            "node_modules/chart.js/dist/Chart.js",
+
                             "node_modules/admin-lte/plugins/jquery/jquery.js",
                             "node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.js",
                             "node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js",
