--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "admin-lte": "^3.0.5",
     "angularx-social-login": "^3.2.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.4.2",
     "ngx-owl-carousel-o": "^3.0.1",
     "object-to-formdata": "^4.0.1",
     "popper.js": "^1.16.1",
